tests/files/flow_controller_tests/should_run/091.cmdr
x = sin(8);
print arcsin(x);