tests/files/flow_controller_tests/should_fail/079.cmdr
x = true;
print arcsin(x);